# sudoku_cpp

./: CMakeLists.txt  README.md
example_input/: boettcher_finds_the_one_that_sucks  extreme
include/: SudokuSolver.h  SudokuSolverLeastOptions.h
src/: SudokuSolver.cpp  SudokuSolverLeastOptions.cpp  convertFileContentToSudokuInputString.cpp  main.cpp  main_fast.cpp  main_slow.cpp
test/: CMakeLists.txt  SudokuSolverTest.h  fooTest.cpp  sudokuSolverLeastOptionsTest.cpp  sudokuSolverTest.cpp
